force-app/main/default/objects/App_Setting__mdt/App_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Application configuration: provider defaults, quotas, named credentials, feature flags.</description>
    <label>App Setting</label>
    <pluralLabel>App Settings</pluralLabel>
</CustomObject>