force-app/main/default/objects/App_Setting__mdt/fields/Default_Model__c.field-meta.xml
<CustomField>
    <fullName>Default_Model__c</fullName>
    <label>Default Model</label>
    <type>Text</type>
    <length>80</length>
</CustomField>