force-app/main/default/objects/App_Setting__mdt/fields/Default_Provider__c.field-meta.xml
<CustomField>
    <fullName>Default_Provider__c</fullName>
    <label>Default Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OpenAI</fullName>
            </value>
            <value>
                <fullName>Gemini</fullName>
            </value>
            <value>
                <fullName>Claude</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Local</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>