force-app/main/default/objects/App_Setting__mdt/fields/Feature_Flag_Nudges__c.field-meta.xml
<CustomField>
    <fullName>Feature_Flag_Nudges__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Feature Flag - Nudges</label>
    <type>Checkbox</type>
</CustomField>