force-app/main/default/objects/App_Setting__mdt/fields/Feature_Flag_Tournaments__c.field-meta.xml
<CustomField>
    <fullName>Feature_Flag_Tournaments__c</fullName>
    <label>Feature Flag - Tournaments</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>