force-app/main/default/objects/App_Setting__mdt/fields/Max_Games_Per_Day_Free__c.field-meta.xml
<CustomField>
    <fullName>Max_Games_Per_Day_Free__c</fullName>
    <label>Max Games Per Day (Free)</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>