force-app/main/default/objects/App_Setting__mdt/fields/Max_Generation_Per_Day_Pro__c.field-meta.xml
<CustomField>
    <fullName>Max_Generation_Per_Day_Pro__c</fullName>
    <label>Max Generation Per Day (Pro)</label>
    <type>Number</type>
    <precision>12</precision>
    <scale>0</scale>
</CustomField>