force-app/main/default/objects/App_Setting__mdt/fields/Max_Questions_Per_Game__c.field-meta.xml
<CustomField>
    <fullName>Max_Questions_Per_Game__c</fullName>
    <label>Max Questions Per Game</label>
    <type>Number</type>
    <precision>12</precision>
    <scale>0</scale>
</CustomField>