force-app/main/default/objects/App_Setting__mdt/fields/OpenAI_Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>OpenAI_Named_Credential__c</fullName>
    <label>OpenAI Named Credential</label>
    <length>80</length>
    <type>Text</type>
</CustomField>