force-app/main/default/objects/App_Setting__mdt/fields/Slack_Bot_Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Slack_Bot_Named_Credential__c</fullName>
    <label>Slack Bot Named Credential</label>
    <length>80</length>
    <type>Text</type>
</CustomField>