force-app/main/default/objects/App_Setting__mdt/fields/Slack_Signing_Secret__c.field-meta.xml
<CustomField>
    <fullName>Slack_Signing_Secret__c</fullName>
    <label>Slack Signing Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>