force-app/main/default/objects/App_Setting__mdt/fields/Slack_Signing_Secret_Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Slack_Signing_Secret_Named_Credential__c</fullName>
    <label>Slack Signing Secret Named Credential</label>
    <length>80</length>
    <type>Text</type>
</CustomField>