force-app/main/default/objects/App_Setting__mdt/fields/Slack_Timestamp_Skew_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Slack_Timestamp_Skew_Seconds__c</fullName>
    <label>Slack Timestamp Skew Seconds</label>
    <type>Number</type>
    <precision>12</precision>
    <scale>0</scale>
</CustomField>