force-app/main/default/objects/App_Setting__mdt/fields/Slack_Verification_Token__c.field-meta.xml
<CustomField>
    <fullName>Slack_Verification_Token__c</fullName>
    <label>Slack Verification Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>