force-app/main/default/objects/App_Setting__mdt/fields/Stripe_Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Named_Credential__c</fullName>
    <label>Stripe Named Credential</label>
    <type>Text</type>
    <length>80</length>
</CustomField>