force-app/main/default/objects/App_Setting__mdt/fields/Web_Google_Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Web_Google_Client_Id__c</fullName>
    <label>Web Google Client Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>