force-app/main/default/objects/App_Setting__mdt/fields/Web_Session_Secret__c.field-meta.xml
<CustomField>
    <fullName>Web_Session_Secret__c</fullName>
    <label>Web Session Secret</label>
    <length>128</length>
    <type>Text</type>
</CustomField>